--- a/index.html
+++ b/index.html
@@ -147,26 +147,50 @@
   <div class="container">
     <h2 class="services-heading">
       COACHING OPTIONS
+      <div class="services-section-icon">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+          viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+          <path
+            d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
+        </svg>
+      </div>
     </h2>
-    <p class="services-description">We have multiple programs and classes to help you meet your goals. Get ready to improve your life.
+    <p class="services-description">We have multiple programs and classes to help you meet your goals. Get ready to
+      improve your life.
     </p>
     <div class="services">
       <div class="ind-services">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>
-          <h4>Online personal training</h4>
-        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+          viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+          <path
+            d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z" />
+        </svg>
+        <h4>Online personal training</h4>
+      </div>
       <div class="ind-services">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>
-          <h4>Fat loss</h4>
-        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+          viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+          <path
+            d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z" />
+        </svg>
+        <h4>Fat loss</h4>
+      </div>
       <div class="ind-services">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>
-          <h4>Nutrition</h4>
-        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+          viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+          <path
+            d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z" />
+        </svg>
+        <h4>Nutrition</h4>
+      </div>
       <div class="ind-services">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>
-          <h4>Muscle building</h4>
-        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+          viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+          <path
+            d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z" />
+        </svg>
+        <h4>Muscle building</h4>
+      </div>
     </div>
   </div>
   </div>
@@ -175,35 +199,38 @@
 
 <!-- About Section -->
 
-<section class="home-page-about-section" style="display: none;">
+<section class="home-page-about-section" >
   <div class="container">
+    <span>ABOUT ABHIFIT</span>
     <h2 class="services-heading">
-      About Scott Laidler
+      MEET YOUR COACH
     </h2>
     <div class="home-page-about-main-div">
       <div class="home-page-about-image">
         <img
-          src="/assets/images/about.webp"
+          src="/assets/images/self/_MG_3483_1.jpg"
           alt="">
       </div>
       <div class="home-page-about-content">
-        <h2 class="home-page-about-heading">Hi, I'm Scott Laidler</h2>
+        <h2 class="home-page-about-heading">I'm Abhinav Singh</h2>
         <div>
-          <p class="home-page-about-para-1">Online fat loss coach, experienced personal trainer, and mentor to the hundreds of men and women who have decided to stand up and make a change.</p>
-          <p class="home-page-about-para-2">Sign up for Online Coaching and let me help you build muscle, get stronger, lose excess
-            weight and live a healthy lifestyle. I'll give you all the personalised workouts, nutrition guidance and
-            motivation you need. We'll work with realistic methods, which means you'll get results you can maintain
-            forever. <strong>Real advice. Real results.</strong></p>
+          <p class="home-page-about-para-1">Abhifitonline's founder and Head Coach. I've been helping men and women around the world feel confident and strong since 2016, and my programs can help you achieve your goals and take control of your fitness in a way that fits into your lifestyle. My mission is to help support them in their health and fitness journey so they can become the BEST version of themselves, and my programs can help you feel confident and strong whether you're a beginner or more advanced. Start training with me and the Abhifit community today!
+          </p>
+          <p class="home-page-about-para-2">–I am the proprietor of my own personal fitness studio, Abhifit Health Club, which was founded four years ago.
+            –My approach to Nutrition is based around helping you create non restrictive habits and build a healthy relationship with food; there is no good or bad, just balance. All our dietary plans and advice focus on positive food relationships and don't encourage/require restrictive eating habits.
+            –With 8 years of pioneering in online personal training, I deliver straightforward, personalized training and nutrition strategies designed to promote lasting health and metabolic support.
+            –Sign up for Online Coaching and let me help you build muscle, get stronger, lose excess weight and live a healthy lifestyle. I'll give you all the personalised workouts, nutrition guidance and motivation you need. We'll work with realistic methods, which means you'll get results you can maintain forever. Real advice. Real results.
+            </p>
           <p class="home-page-about-para-3">I help ordinary people build extraordinary bodies without sacrificing their lifestyle and
             social events.</p>
           
         </div>
-        <p>With over 10 years experience as a personal trainer & nutrition professional, I can help you take your fitness to the next level, regain confidence and create a consistent routine.</p>
+        <p> –Sign up for Online Coaching and let me help you build muscle, get stronger, lose excess weight and live a healthy lifestyle. I'll give you all the personalised workouts, nutrition guidance and motivation you need. We'll work with realistic methods, which means you'll get results you can maintain forever. Real advice. Real results.</p>
       </div>
     </div>
   </div>
 </section>
-
+<!-- About Section -->
 
 
 <!-- Why Us Section -->
