--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@ If you watch the interviews on our results page on /results you will read many s
 
 <section class="get-started-section">
   <div class="container">
-    <span class="get-started-subheading">READY TO LOOK BETTER, FEEL BETTER AND PERFORM AT YOUR BEST?</span>
+    <!-- <span class="get-started-subheading">READY TO LOOK BETTER, FEEL BETTER AND PERFORM AT YOUR BEST?</span> -->
     <h2 class="get-started-heading">GET STARTED TODAY</h2>
     <!-- <p class="get-started-para">Please fill out the form below and let's start your new healthy lifestyle</p> -->
     <h3 class="get-started-para">Ready to discover the difference yourself?</h3>
