changes in about section

--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@
       </div>
       <div>
         <h2>A LIFESTYLE CHANGE YOU CAN ACTUALLY STICK TO</h2>
-        <p>I believe everyone can live their best life and the body they dream of, with the right coaching, diet and fitness program. This is why I am passionate about giving you the right advice, all the knowledge and personal tools you need to get you started on your journey and the mindset to succeed!</p>
-        <p>I understand every client is different and not one size fits all. That’s why I offer a variety of services and programs tailored to your specific goals and needs ensuring you achieve real, lifelong improvements to your health, body and life!</p>
-        <p>Together with the right coaching and support we can achieve your personal goals and give you back your confidence. If you need help choosing which coaching option is the best for you just drop me a message or click the ‘get in touch’ link below!
+        <p>I think everyone can achieve their ideal life and the physique of their dreams with the correct guidance, nutrition, and exercise program.This is why I am committed to provide you with the best guidance, information, and personal resources to get you started on your path and the mindset you need to achieve!</p>
+        <p>I understand that there is no one-size-fits-all solution and that each client is unique.That’s why I provide a range of services and programs that are customized to meet your unique requirements and goals, guaranteeing that you make significant, long-lasting changes to your physical and mental well-being.
         </p>
+        <p>With the right coaching and support, we can help you achieve your individual objectives and regain your self-confidence .If you need help choosing which coaching option is the best for you just drop me a message or click the ‘get in touch’ link below!</p>
+        <a href="https://wa.me/917696721404?text=Hi%2C+Abhinav.+I+am+interested+in+your+online+coaching.+I%27d+like+to+chat+with+you%21" class="btn">GET IN TOUCH</a>
       </div>
     </div>
   </div>
@@ -709,7 +710,7 @@ If you watch the interviews on our results page on /results you will read many s
     <!-- <p class="get-started-para">Please fill out the form below and let's start your new healthy lifestyle</p> -->
     <h3 class="get-started-para">Ready to discover the difference yourself?</h3>
     <a href="https://wa.me/917696721404?text=Hi%2C+Abhinav.+I+am+interested+in+your+online+coaching.+I%27d+like+to+chat+with+you%21" class="btn large">LET'S BEGIN!</a>
-      <p class="get-started-para"> Or Call Us at <a href="tel:"917696721404">917696721404</a> </p>
+      <p class="get-started-para"> Or Call Us at <a href="tel:917696721404">917696721404</a> </p>
     <!-- <p class="get-started-para">Call <a href="tel:"917696721404">917696721404</a> or fill the form to start your journey today!</p> -->
     <!-- <div class="home-page-get-started-form-and-content">
       <div class="home-page-get-started-content">
