--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
                   <picture>
                     <!-- <source srcset="/assets/images/transformations/234205323_984268282307720_4210025787407486632_n.avif" type="image/avif" /> -->
                     <source srcset="/assets/images/transformations/234205323_984268282307720_4210025787407486632_n.webp" type="image/webp" />
-                    <img src="/assets/images/setransformationslf/234205323_984268282307720_4210025787407486632_n.jpg" class="card-img-top" alt="" loading="lazy"/>
+                    <img src="/assets/images/transformations/234205323_984268282307720_4210025787407486632_n.jpg" class="card-img-top" alt="" loading="lazy"/>
                   </picture>
                 </div>
-                <div class="client-detail">
+                <!-- <div class="client-detail">
                   <h4 class="client-name">Ishita</h4>
                   <p class="client-age">Age: 30s</p>
                   <p class="client-improvement">17kg in 12Weeks</p>
-                </div>
+                </div> -->
               </div>
             </li>
           </li>
@@ -172,25 +172,25 @@
             <div class="ind-success-stories">
               <div class="card-body">
                 <picture>
-                  <!-- <source srcset="/assets/images/self/234205323_984268282307720_4210025787407486632_n.avif" type="image/avif" /> -->
-                  <source srcset="/assets/images/self/234205323_984268282307720_4210025787407486632_n.webp" type="image/webp" />
-                  <img src="/assets/images/self/234205323_984268282307720_4210025787407486632_n.jpg" class="card-img-top" alt="" loading="lazy"/>
+                  <!-- <source srcset="/assets/images/transformations/288600988_788744835456646_3342542179521151493_n.avif" type="image/avif" /> -->
+                  <source srcset="/assets/images/transformations/288600988_788744835456646_3342542179521151493_n.webp" type="image/webp" />
+                  <img src="/assets/images/transformations/288600988_788744835456646_3342542179521151493_n.jpg" class="card-img-top" alt="" loading="lazy"/>
                 </picture>
               </div>
-              <div class="client-detail">
+              <!-- <div class="client-detail">
                 <h4 class="client-name">Ishita</h4>
                 <p class="client-age">Age: 30s</p>
                 <p class="client-improvement">17kg in 12Weeks</p>
-              </div>
+              </div> -->
             </div>
           </li>
           <li class="glide__slide">
             <div class="ind-success-stories">
-              <div class="client-detail">
+              <!-- <div class="client-detail">
                 <h4 class="client-name">Ishita</h4>
                 <p class="client-age">Age: 30s</p>
                 <p class="client-improvement">17kg in 12Weeks</p>
-              </div>
+              </div> -->
               <div class="card-body">
                 <picture>
                   <!-- <source srcset="/assets/images/transformations/323508345_1280058489209641_1162097551109329572_n.avif" type="image/avif" /> -->
@@ -262,7 +262,7 @@
                   <picture>
                     <!-- <source srcset="/assets/images/transformations/343291462_550309573952523_1239488516768924758_n.avif" type="image/avif" /> -->
                     <source srcset="/assets/images/transformations/343291462_550309573952523_1239488516768924758_n.webp" type="image/webp" />
-                    <img src="/assets/images/transformations/343291462_550309573952523_1239488516768924758_n" class="card-img-top" alt="" loading="lazy"/>
+                    <img src="/assets/images/transformations/343291462_550309573952523_1239488516768924758_n.jpg" class="card-img-top" alt="" loading="lazy"/>
                   </picture>
                 </div>
               </div>
