--- a/services.html
+++ b/services.html
@@ -105,7 +105,7 @@
         <div class="services-page">
           <div class="ind-services-page">
             <div class="services-image">
-              <img src="/assets/images/pexels-andres-ayrton-6551070.jpg" alt="" width="620" height="620" style="background-image: url(/assets/images/low-res.jpg)">
+              <img src="/assets/images/pexels-andres-ayrton-6551070.jpg" alt="" width="620" height="620" style="background-image: url(/assets/images/low-res.jpg); background-size: cover;">
               <!-- <img src=hi-res.jpg
        alt="Appropriate alternate text"
        width=360
