--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <meta name="theme-color" content="#4285f4" /> -->
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="assets/images/W-image.png"> -->
     <!-- <link rel="icon" href="demo_icon.gif" type="image/gif" > -->
-
+    <link rel=preload as=image href="/assets/images/self/20241023_180835_0000_low_res.jpg" fetchpriority=high>
         <!-- third-generation iPad with high-resolution Retina display: -->
     <link rel="apple-touch-icon" sizes="144x144" href="favicon_black_144x144.png" />
     <!-- iPhone with high-resolution Retina display: -->
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.core.css" integrity="sha512-ShLuspGzRsTiMlQ2Rg0e+atjy/gVQr3oYKnKmQkHQ6sxcnDAEOtOaPz2rRmeygV2CtnwUawDyHkGgH4zUbP3Hw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>AbhifitOnline - Online Weight Loss Coach</title>
+   
 </head>
 <body>
     <header class="header">
@@ -108,7 +109,7 @@
               <picture>
                 <source srcset="/assets/images/self/20241023_180835_0000_low.avif" type="image/avif" />
                 <source srcset="/assets/images/self/20241023_180835_0000.webp" type="image/webp" />
-                <img src="/assets/images/self/20241023_180835_0000_min.jpg" alt="photo" />
+                <img src="/assets/images/self/20241023_180835_0000_min.jpg" alt="photo"  width="600" style="background-image: url(/assets/images/self/20241023_180835_0000_low_res.jpg); background-size: cover;aspect-ratio: 1/1;"/>
               </picture>               
             </div>
         </div>
