added insta feed section

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                   For over 8 years, Abhifit has delivered life changing results to people of all ages and fitness levels and have transformed the physiques of 500+ people.</p>
                   <!-- <p class="home-page-intro">It's time to finally build that strong, lean body you've wanted for a long time.Let me guide you to results through Online Coaching</p> -->
                 <p class="home-page-work-with-you"> AS YOUR ONLINE PERSONAL TRAINER, I WILL DO THE SAME FOR YOU</p>
-                <a href="" class="btn home-page-welcome-btn">Try ABHIFIT</a>
-                <a href="" class="btn home-page-welcome-btn">Contact Us</a>
+                <a href="https://wa.me/917696721404?text=Hi%2C+Abhinav.+I+am+interested+in+your+online+coaching.+I%27d+like+to+chat+with+you%21" class="btn home-page-welcome-btn">Try ABHIFIT</a>
+                <a href="tel:917696721404" class="btn home-page-welcome-btn">Contact Us</a>
             </div>
             </div>
             <div class="home-page-welcome-image">
@@ -798,6 +798,49 @@ If you watch the interviews on our results page on /results you will read many s
 
 <!-- Get Started Section -->
 
+<!-- Insta Feed -->
+<section class="insta-feed-section">
+  <div class="container">
+    <div>
+      <div class="insta-feed-heading">
+        <p>FOLLOW US ON INSTAGRAM</p>
+        <h2><a href="https://www.instagram.com/abhifitonline/?hl=en">@ABHIFITONLINE</a></h2>
+      </div>
+      <div class="single-insta-post">
+        <a href="https://www.instagram.com/abhifitonline/reel/DGNtiP7gXQA/?hl=en">
+          <img src="/assets/images/insta feed/480370730_653940443722205_5952145086838837745_n.jpg" alt="" target="_blank">
+        </a>
+        <a href="https://www.instagram.com/abhifitonline/reel/DGF_B1cs21w/?hl=en">
+          <img src="/assets/images/insta feed/480275636_18490203244060261_1029509707018594636_n.jpg" alt="" target="_blank">
+        </a>
+        <a href="https://www.instagram.com/abhifitgym/reel/DBOI7yIt0kS/?hl=en">
+          <img src="/assets/images/insta feed/463652492_546108651608215_8408355411991938224_n.jpg" alt="" target="_blank">
+        </a>
+        <a href="https://www.instagram.com/abhifitonline/p/C8em_WCvDcl/?hl=en">
+          <img src="/assets/images/insta feed/448668668_791884223054100_2747105175223085115_n.jpg" alt="" target="_blank">
+        </a>
+
+        <a href="https://www.instagram.com/abhifitonline/p/C1Zc4JFCsUy/?hl=en">
+          <img src="/assets/images/insta feed/413958065_233925132987363_8584204486530555609_n.jpg" alt="" target="_blank">
+        </a>
+        <a href="https://www.instagram.com/abhifitonline/p/Cx72rVJteZU/?hl=en">
+          <img src="/assets/images/insta feed/385263828_23888600690788130_8065888892260150897_n.jpg" alt="" target="_blank">
+        </a>
+        <a href="https://www.instagram.com/abhifitonline/p/Cm88EyADuvJ/?hl=en">
+          <img src="/assets/images/insta feed/323795933_571913607694397_3648995885823388384_n.jpg" alt="" target="_blank">
+        </a>
+        <a href="https://www.instagram.com/abhifitonline/p/CbsMQHQPeBL/?hl=en">
+          <img src="/assets/images/insta feed/277322479_681537136495772_6263090005023558610_n.jpg" alt="" target="_blank">
+        </a>
+
+        
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Insta Feed -->
+
     </main>
     <footer class="footer">
         <a href="#" id="backToTopBtn" class="backToTopBtn" >
@@ -857,8 +900,8 @@ If you watch the interviews on our results page on /results you will read many s
             </div>
             <div class="copyright-section">
                 <div class="copyright">
-                    <p><small>
-                      © 2025 AbhifitOnline All Right Reserved. </small></p>
+                    <small>
+                      © 2025 AbhifitOnline All Right Reserved. 
                     </small>
                 </div>
                 <!-- <div class="terms-privacy-disclaimer"><small> <a class="anchor" href="privacy-policy.html">Privacy Policy</a> |
